# polyxios

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meson.build  pyproject.toml
.github/workflows/: build_docs.yml  check_format.yml  precommit_update.yml  release.yml  test.yml
.spin/: cmds.py
docs/: Makefile  conf.py  contributing.rst  development.rst  index.rst  installation.rst  usage.rst
docs/api/: index.rst
examples/: visualize_vtk.py
polyxios/: __init__.py  _backend.py  _core.pxd  _core.pyx  _core_fallback.py  _element_types.py  _registry.py  _types.py  exceptions.py  meson.build  transforms.py  validate.py
polyxios/codecs/: _obj.py  _ply.py  _stl.py  _vtk.py  _vtk_parse.pyx  _vtp.py  _vtp_base64.pyx  _vtr.py  meson.build
tests/: test_transforms.py  test_validate.py  test_validate_header.py
tests/codecs/: test_obj.py  test_ply.py  test_stl.py  test_vtk.py  test_vtp.py  test_vtr.py
tools/: commit-msg.py  github_stats.py  gitversion.py
